# cmake-gtk

./: CMakeLists.txt  add_cache_entry.ui  add_cache_entry.vala  app-menu.ui  cache.vala  cacheentry.vala  cachetype.vala  cmake.gresource.xml  cmake.vala  cmake_setup.ui  cmake_setup.vala  gears-menu.ui  main.vala  property-editor.vala  toolchain_assistant.ui  toolchain_assistant.vala
CMake/: FindVala.cmake
